Mention instanton moduli space

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1631,6 +1631,13 @@ free magnetic $\log(R\Lambda)/R$,
 Higgs (constant),
 confining $\sigma R$.
 
+\paragraph{Instantons}
+are anti-self-dual ($F=-{\star F}$) connections on~$\RR^4$ that decay at infinity and extend to~$S^4$.
+The bundles are classified by $\pi_3(G)$ so an instanton number $k\in\ZZ$ for simple gauge groups;
+for fixed $k\geq 0$ ($k\leq 0$) (anti)instantons minimize the action.
+The $k$-instanton moduli space for $G=\Lie{SU}(N)$ is a $4Nk$-dimensional \href{http://inspirehep.net/record/128223}{[inspi:128223]} hyperK\"ahler manifold,
+in bijection with rank~$N$ framed locally free sheaves on~$\CC\PP^2$ \href{http://inspirehep.net/record/125044}{[inspi:125044]}.
+
 \subsection{Homology and cohomology}
 
 \paragraph[Complex projective space]{$H_k(\CC\PP^n,M)$}${}=M$ for $0\leq k\leq 2n$ even, else~$0$.
